# agent-x-oss

./: .gitignore  README.md
.github/workflows/: python-package.yml
agents/executive-pov-agent/: example.md  input-format.md  system.md
agents/founder-post-agent/: example.md  input-format.md  system.md
agents/launch-comms-agent/: example.md  input-format.md  system.md
agents/risk-check-agent/: example.md  input-format.md  system.md
agents/technical-to-human-agent/: example.md  input-format.md  system.md
docs/: contributing.md  how-it-works.md  roadmap.md
examples/founder-update/: input.md  output.md
examples/saas-launch/: input.md  output.md
social_reply_crew/: .env.example  .gitignore  README.md  pyproject.toml
social_reply_crew/src/social_reply_crew/: __init__.py  __main__.py  agents.py  browser_tools.py  config.py  db.py  digest.py  exceptions.py  interaction_history.py  main.py  memory_store.py  models.py  voice_intake.py  web_ui.py
social_reply_crew/tests/: test_browser_tools.py  test_db.py
templates/: launch-brief-template.md  linkedin-post-template.md  x-post-template.md
